# pathfinding-visualizer-wasm-rust

./: .gitignore  Cargo.toml  README.md  index.html
src/: a_star.rs  canvas.rs  cell.rs  color.rs  grid.rs  main.rs  position.rs
src/event_listeners/: button_listeners.rs  button_onclick.rs  canvas_listeners.rs  input_listeners.rs  mod.rs
static/: index.html  style.css  style.scss
