[package]
name = "wasm-pathfinding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.61"
stdweb = "0.4.20"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
	'Document',
	'Element',
	'HtmlElement',
	'Node',
	'NodeList',
	'Window',
	'HtmlInputElement',
	'HtmlCanvasElement',
	'CanvasRenderingContext2d'
]
